# ecommerce-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env
alembic/: env.py
alembic/versions/: b866b8fb9814_added_initial_table.py
app/: config.py  main.py
app/api/routes/: orders.py  products.py
app/crud/: order.py  product.py
app/db/: base.py  database.py
app/exceptions/: http_exceptions.py
app/models/: order.py  product.py
app/schemas/: order.py  product.py
tests/: conftest.py
tests/test_orders/: test_orders.py
tests/test_products/: test_product_endpoints.py  test_products.py
